# code-migration

./: .gitignore  README.md  USAGE.md  aux.py  diff_finder.py  get_codebleu_metric.py  main.py  parser.py  pyproject.toml  requirements.txt  run_migrations.py
configs/: gpt_4o_mini.json  ollama_codeqwen.json  ollama_codeqwen_java.json  ollama_cot.json  ollama_one_shot.json
input/java/: JUnit-TestNG.csv  Mockito-EasyMock.csv  junit_testng.csv  mockito_easymock.csv
input/python/: Boto-Boto3.csv  Python migrations treated - treated_python_commits (1).csv  Request-Urllib.csv
models/: ollama_client.py
models/templates/: chain_of_thoughts.txt  one_shot.txt  zero_shot.txt
src/code_migration/: __init__.py  __main__.py  cli.py  config.py  manifest.py
src/code_migration/clients/: __init__.py  base.py  gpt.py  ollama.py  registry.py
src/code_migration/pipeline/: __init__.py  batch.py  migrate.py  parse.py  run.py  score.py
src/code_migration/templates/: chain_of_thoughts.txt  one_shot.txt  zero_shot.txt
src/code_migration/utils/: paths.py
